/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id("java")
    id("org.springframework.boot") version "2.4.5"
    id("io.spring.dependency-management") version "1.0.11.RELEASE"
}

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor("org.projectlombok:lombok")
    implementation("org.projectlombok:lombok")

    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("javax.inject:javax.inject:1")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-websocket")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.4.5")
    implementation("org.springframework.security.oauth:spring-security-oauth2:2.5.1.RELEASE")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
    implementation("org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:7.15.0")
    implementation("com.yahoo.elide:elide-core:5.0.0-pr32")
    implementation("com.yahoo.elide:elide-datastore-hibernate5:5.0.0-pr32")
    implementation("org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-test:7.15.0")
    implementation("com.google.guava:guava:29.0-jre")
    implementation("org.jetbrains:annotations:20.1.0")
    runtimeOnly("com.h2database:h2")
    runtimeOnly("org.postgresql:postgresql")
    testImplementation("com.h2database:h2")
    testImplementation("org.camunda.bpm.extension.mockito:camunda-bpm-mockito:5.14.0")
}

group = "com.faforever.gw"
version = "0.0.4"
description = "faf-gw-backend"

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}
